--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: einzweidinge
-Author: Mike
+Author: Mike Savage
 Description: Our lovely wordpress theme by Mike Sav!
-Version: 1.12
+Version: 1.14
 */
