--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: einzweidinge
 Author: Mike Savage
-Description: Our lovely wordpress theme by Mike Sav!
-Version: 1.30
+Description: Our lovely Wordpress theme by Mike Sav!
+Version: 1.3.7
 */
